Fix layout bug

--- a/style.css
+++ b/style.css
@@ -12,6 +12,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 15vh;
-    gap: 10vh;
+    margin-top: 10vh;
+    gap: 5vh;
 }
